[project]
name = "wantly-mcp-utils"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Groys", email = "mgroys@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.18.0,<2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
