[project]
name = "wantly-mcp-utils"
version = "0.6.2"
description = "Utilities for building mcps for wantly chat platform"
readme = "README.md"
authors = [
    { name = "Michael Groys", email = "michael@wantly.chat" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.18.0,<2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pypi-gc"
url = "https://europe-north2-python.pkg.dev/ancient-pipe-461512-m8/pypi/simple"
publish-url = "https://europe-north2-python.pkg.dev/ancient-pipe-461512-m8/pypi/"
explicit = true
